bgd/service.yml
apiVersion: v1
kind: Service
metadata:
  name: bgd
spec:
  selector:
    app: bgd
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
