bgd/route.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bgd
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bgd
            port:
              number: 8080
